mlops/rag-cloud/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: rag
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: rag-backend
      containers:
        - name: worker
          image: docker.io/zackz001/aws-rag-v1:cloud-latest
          command: ["python", "-m", "app.worker"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
